stop battling if energy/health/food too low

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -497,6 +497,10 @@ a:visited {
 	padding: 2px;
 }
 
+.canBattle {
+	color: red;
+}
+
 #pokemonshow .bar {
 	height: 10px;
 	width: 0;
